# timi

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: .main.rs.swp  bin.rs  frontend.rs  ir.rs  lib.rs  machine.rs  main.rs  pretty_print.rs
tests/: foldr.rs  test_machine.rs
